# ComfyUI-LVCDWrapper

./: README.md  nodes.py  pyproject.toml  requirements.txt
configs/: lvcd.yaml
examples/: lvcd_test_example_01.json
inference/: model_hack.py  sample_func.py
models/: csvd.py  layers.py
sgm/: util.py
sgm/models/: autoencoder.py  diffusion.py
sgm/modules/: __init__.py  attention.py
sgm/modules/autoencoding/: temporal_ae.py
sgm/modules/autoencoding/losses/: discriminator_loss.py
sgm/modules/autoencoding/lpips/loss/: lpips.py
sgm/modules/diffusionmodules/: model.py  sampling.py  util.py  video_model.py  wrappers.py
sgm/modules/encoders/: modules.py
